--- a/OOP/Victims/README
+++ b/OOP/Victims/README
@@ -1,1 +1,1 @@
-One application with cruel operations, having Graphic User Interface
+One application with cruel operations, having Graphic User Interface and using the Observer pattern
