--- a/OOP/README
+++ b/OOP/README
@@ -1,1 +1,2 @@
 Here are some projects in C++ and one in C
+Victims is the most complex one. This uses a lot of interesting stuff like Observer patern.
